@@ -423,7 +423,7 @@ Other Changes
  8. SOLR-875: Upgraded to Lucene 2.9-dev (r723985) and consolidated the BitSet implementations (Michael Busch, gsingers)
 
  9. SOLR-819: Upgraded to Lucene 2.9-dev (r724059) to get access to Arabic public constructors (gsingers)
-
+                                                 and
 10. SOLR-900: Moved solrj into /src/solrj.  The contents of solr-common.jar is now included
     in the solr-solrj.jar. (ryan)
 
@@ -483,6 +483,9 @@ Other Changes
     (Kaktu Chakarabati via shalin)
 
 34. Upgraded to Lucene 2.9-dev r779312 (yonik)
+
+35. SOLR-786: Refactor DisMaxQParser to allow overriding certain features of DisMaxQParser
+    (Wojciech Biela via shalin)
 
 Build
 ----------------------
